# lleaves

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE  README.md  README.org  compile_and_run.py  compiler.py  environment.yml  frontend.py  model.json  model.txt  print_IR.py  pyproject.toml  setup.py
.github/: ci.sh
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py  benchmark_small_batches.py  simple_timeit.py  train_NYC_model.py  train_airline_model.py
benchmarks/c_bench/: CMakeLists.txt  README.md  benchmark.sh  c_bench.cpp  c_bench.h  gen_binary.py  plot_toplev.sh
benchmarks/data/: gen_npy.py  setup_data.sh
benchmarks/results/: 8de860.txt  aa8446.txt  b17af8.txt  b65fdd.txt
docs/: conf.py  development.rst  index.rst
docs/development/: LightGBM-model-file.rst
lleaves/: LightGBM.py  __init__.py  data_processing.py  lleaves.py  llvm_binding.py
lleaves/compiler/: __init__.py  fastmathpass.py  objective_funcs.py  tree_compiler.py  utils.py
lleaves/compiler/ast/: __init__.py  nodes.py  parser.py  scanner.py
lleaves/compiler/codegen/: __init__.py  codegen.py
lleaves/compiler/passes/: __init__.py  fastmathpass.py  inliner.py
lleaves/tree_compiler/: __init__.py  ast.py  decision_tree.py  frontend.py  objective_funcs.py  parser.py  tree_compiler.py  utils.py
lleaves/tree_compiler/ast/: __init__.py  ast.py  nodes.py  parser.py
oai/: environment.yml  make_request.py
perf_testing/: timeit.ipynb  timeit.py
tests/: conftest.py  model.json  test_benchmark.py  test_categoricals.py  test_compile_flags.py  test_dataprocessing.py  test_interface.py  test_nans.py  test_nulls.py  test_objective_functions.py  test_parallel.py  test_parsing.py  test_passes.py  test_predict_interface.py  test_tree_output.py
(+22 files in other folders)
